k8s_config/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: pastado/spark-hadoop:v0.01
          command: ["/spark-master"]
          ports:
            - containerPort: 8080
            - containerPort: 7077
          resources:
            requests:
              cpu: 100m
