k8s_config/nginx-loadbal.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-loadbal
  # namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
  # labels:
  #   app.kubernetes.io/name: ingress-nginx
  #   app.kubernetes.io/part-of: ingress-nginx
spec:
  # externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    component: spark-master
    # app.kubernetes.io/name: ingress-nginx
    # app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: https
