k8s_config/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  # name "spark-master" is used for communication between workers & master
  name: spark-master  
spec:
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
  selector:
    component: spark-master
