k8s_config/spark-master-webui-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport
spec:
  type: NodePort
  selector:
    component: spark-master
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
