k8s_config/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - host: spark-kubernetes
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-service
            port:
              number: 8080
