k8s_config/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spark-cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-master-cluster
            port:
              number: 8080
